fix: stopped header background overflowing

--- a/styles.css
+++ b/styles.css
@@ -41,6 +41,13 @@ h6 {
 
 .header-background {
 	position: absolute;
+	overflow-x: hidden;
+	width: 100%;
+	min-height: 350px;
+}
+
+.header-background div {
+	position: absolute;
 	min-height: 350px;
 	width: 100%;
 	z-index: -1;
